--- a/chrono-logical-grails/application.properties
+++ b/chrono-logical-grails/application.properties
@@ -1,7 +1,9 @@
 #utf-8
-#Sat Aug 01 10:08:18 NZST 2009
+#Sun Aug 02 14:14:30 NZST 2009
 app.version=0.1
 app.servlet.version=2.4
 app.grails.version=1.1.1
 plugins.hibernate=1.1.1
+plugins.joda-time=0.4.2
+plugins.calendar=1.2.0-SNAPSHOT2
 app.name=chrono-logical-grails
